# ann

./: .gitignore  README.md  front.html
functions/: mean_pixel.cpp  pixel_distance.cpp
photos/: IMG_2055.HEIC  demo.html  readme.md  Пшеница (бурая ржавчина1).HEIC  Пшеница (бурая ржавчина2).HEIC
python/: readme.md
python/TrainNoData/: BackDetector.ipynb  PretrainedCnn+SVM.ipynb  eraseBack.ipynb  eraseBackHsv.ipynb  load.ipynb  prep224.ipynb  processNatural.ipynb  test_arch_legacy.ipynb  test_arch_softmax.ipynb  trainOneBckg.ipynb  trainOneBckgBin.ipynb  whiteFull.ipynb
python/built/connect/: request.py
python/fitoClean/: BackDetector.ipynb  Only_heic_learning.ipynb  PretrainedCnn+SVM.ipynb  final_classification.ipynb  preprocess.ipynb  readme.md  train-CNN.ipynb
python/jupyter/: Filter_exp.ipynb  Without_filter_expo.ipynb  cutSize.ipynb  test_arch.ipynb
python/microService/: IMG_2054.HEIC  basic.pt  convert.py  server.py
python/savedModels/: basic-100.pt  basic-aug.pt  basic-full-data.pt
test-convert/: IMG_2056.HEIC  Source.cpp  readme.md  stb_image_write.h
test_average/: README.md  main.cpp
webIntegration/front/: OldFront.html
webIntegration/package/microServiceV2/microServiceV2/: pyproject.toml
webIntegration/package/microServiceV2/microServiceV2/microservicev2/: __main__.py  decodeHeif.py  launchServer.py  lightArch.py
webIntegration/package/microServiceV2/microServiceV2/microservicev2/models/: light.pckl
webIntegration/package/microServiceV2/microServiceV2/tests/: test_microservicev2.py
webIntegration/server/: main.db  server.py  test.py
(+8 files in other folders)
